# upt

./: .travis.yml  Cargo.toml  README-zh_CN.md  README.md  appveyor.yml  install.sh
.github/workflows/: ci.yml  publish.yml  test.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: action.rs  error.rs  lib.rs  macros.rs  main.rs  parser.rs  subcommand.rs  task.rs  upt.rs  utils.rs  vendor.rs
