[package]
name = "upt"
version = "0.4.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "Universal package management tool for any OS"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/upt"
repository = "https://github.com/sigoden/upt"
categories = ["command-line-utilities"]
keywords = ["universal", "package", "management"]

[[bin]]
doc = false
name = "upt"

[profile.release]
lto = true
strip = true
opt-level = "z"