[package]
name = "upt"
version = "0.3.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "Universal package management tool for all OSs"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/upt"
repository = "https://github.com/sigoden/upt"
categories = ["command-line-utilities"]
keywords = ["universal", "package", "management"]

[dependencies]
which = "5.0.0"

[[bin]]
doc = false
name = "upt"

[profile.release]
lto = true
strip = true
opt-level = "z"
