[package]
name = "upt"
version = "0.6.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "Universal package management tool for any OS"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/upt"
repository = "https://github.com/sigoden/upt"
categories = ["command-line-utilities"]
keywords = ["universal", "package", "management"]

[dependencies]
which = "6.0.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
